Improve how a repository is displayed in the calendar
- Allow configuration properties to be used to override how a
  repository's name is transformed into the name that's displayed on
  the calendar
- Allow configuration properties to be used to override how a
  repository's name is used to link to its project page on
  https://enterprise.spring.io